--- a/www/index.html
+++ b/www/index.html
@@ -55,18 +55,37 @@
 				<div class='jumbotron'> 
 					<div class="container">
 						<div class='hero'>
-				            <h1>Welcome to THE PEERS</h1>
-				            <p>British Designer Brands</p>
+				            <h1>INGENIOUS INSTRUMENTS</h1>
+				            <p>Scientific Instruments</p>
 				            <h1>Coming Soon</h1>
 				        </div>
 				    </div>
 				</div>
+
+<div class='container'>
+					<div class='row'>
+						<div class='col-md-8'>
+							<h2>This platform is unique</h2>
+								<p>Designers.</p>
+
+
+<object width="600" ><param name="movie" value="http://www.youtube.com/v/Qxz-lS3BY2Y?rel=0"></param><param name="allowFullScreen" value="true"></param><embed src="http://www.youtube.com/v/Qxz-lS3BY2Y?rel=0" type="application/x-shockwave-flash" allowfullscreen="true" height = "360" width="600"></embed></object>
+
+						</div>
+
+		</div>
+
+
+</div>
+
 
 				<div class='container'>
 					<div class='row'>
 						<div class='col-xs-4'>
 							<h2>This platform is unique</h2>
 								<p>Designers.</p>
+
+
 						</div>
 
 						<div class='col-xs-4'> 
